Source/WebCore/rendering/RenderLayer.cpp
@@ -2416,7 +2416,7 @@ void RenderLayer::paintScrollCorner(GraphicsContext* context, const LayoutPoint&
 
 void RenderLayer::drawPlatformResizerImage(GraphicsContext* context, LayoutRect resizerCornerRect)
 {
-    float deviceScaleFactor = Page::deviceScaleFactor(renderer()->frame());
+    float deviceScaleFactor = WebCore::deviceScaleFactor(renderer()->frame());
 
     RefPtr<Image> resizeCornerImage;
     IntSize cornerResizerSize;
